--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a {
 ul,
 ul a {
   list-style: none;
-  color: #a1a1a1;
+  color: var(--secondary-text);
 }
 
 header {
@@ -49,4 +49,51 @@ header {
 nav ul {
   display: flex;
   gap: 30px;
+}
+
+.hero {
+  height: 100dvb;
+  padding: 0 50px;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  background-color: var(--dark-bg);
+}
+
+.hero-text {
+  flex: 1;
+}
+
+.hero-text h2 {
+  font-size: 3rem;
+  font-weight: 800;
+  color: var(--main-text);
+}
+
+.hero-text p {
+  color: var(--secondary-text);
+  font-size: 18px;
+}
+
+.hero-text button {
+  border: none;
+  outline: none;
+  width: 120px;
+  height: 30px;
+  margin-top: 20px;
+  color: var(--main-text);
+  background-color: var(--call-bg);
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 7px;
+}
+
+.hero-img {
+  flex: 1;
+}
+
+.hero-img img {
+  width: 700px;
+  height: max-content;
+  object-fit: cover;
 }
