--- a/style.css
+++ b/style.css
@@ -97,3 +97,49 @@ nav ul {
   height: max-content;
   object-fit: cover;
 }
+
+.info {
+  padding: 0 30px;
+  margin: 60px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info h2 {
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--info-text);
+}
+
+.adventures {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.ad {
+  border: 8px solid var(--call-bg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+}
+
+.ad img {
+  border-radius: 1px;
+  width: 300px;
+  height: 400px;
+  object-fit: cover;
+}
+
+footer {
+  background-color: var(--dark-bg);
+  color: var(--main-text);
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+}
